[package]
name = "ebou"
version = "0.2.0"
edition = "2021"
description = "Experimental Mastodon Client"
build = "build.rs"

[package.metadata.bundle]
name = "Ebou"
identifier = "com.stylemac.ebou"
icon = ["icons/Icon.icns", "icons/icon-win-256.png", "icons/icon-win-32.png", "icons/icon-win-16.png"]
version = "0.1.0"
copyright = "Copyright (c) Benedikt Terhechte (2023). All rights reserved."
category = "Social Network"
short_description = "Experimental Mastodon Client"
osx_minimum_system_version = "10.14"

[lib]
name = "ebou"
crate-type = ["staticlib", "lib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dioxus = { git = "https://github.com/DioxusLabs/dioxus", ref = "388fb30" }
dioxus-desktop = { git = "https://github.com/DioxusLabs/dioxus", ref = "388fb30" }
tokio = { version = "1", features = ["full"] }
webbrowser = "0.8.9"
muda = "0.7.0"
futures-util = "0.3.21"
reqwest = { version = "0.11", features = ["json"] }
dotenvy_macro = "0.15.1"
chrono = { version = "0.4", features = ["serde", "unstable-locales"]}
numfmt = "1.0.0"
serde = { version = "1.0.136", features = ["derive", "rc"] }
serde_json = "1.0.79"
html5gum = "0.5.2"
futures-channel = "0.3.25"
lazy_static = "*"
rfd = "0.11.3"
base64 = "0.21.0"
flume = "0.10.14"
copypasta = "0.8.1"
id_tree = { version = "1.8.0", features = ["serde_support"] }
window-vibrancy = "0.3.2"
im = { version = "15.1.0", features = ["serde"] }
urlencoding = "2.1.2"
strum = "0.25"
strum_macros = "0.25"
enumset = { version = "1.0.12", features = ["serde"] }
pure-rust-locales = "0.5.6"
url = { version = "2.3.1", features = ["serde"] }
linkify = "0.10"
log = "0.4.17"
itertools = "0.11"
async-trait = "0.1.64"
navicula = { git = "https://github.com/terhechte/navicula", ref = "b7eb3d0318ac3a6a2bf9fa5f4ed32d6e388ec496" }
debug_panic = "0.2.1"
megalodon = "0.8.5"
env_logger = "0.10"

[build-dependencies]
grass = { version = "0.12.4", features = ["macro"] }

[target."cfg(target_os = \"macos\")".dependencies]
cocoa = "0.25.0"
objc = "0.2"
cacao = { git = "https://github.com/terhechte/cacao", branch = "segmented_control_icons_toolbar" }
image = { version = "0.24.5", features = ["jpeg"] }
directories-next = "2.0.0"
current_locale = "0.1.1"
sha2 = "0.10.6"
dispatch = "0.2.0"

[target."cfg(target_os = \"windows\")".dependencies]
image = { version = "0.24.5", features = ["jpeg"] }
directories-next = "2.0.0"
current_locale = "0.1.1"
sha2 = "0.10.6"
windows = { version = "0.44.0", features = ["Win32_Foundation"]}
winapi = "0.3.9"

[target."cfg(target_os = \"linux\")".dependencies]
image = { version = "0.24.5", features = ["jpeg"] }
directories-next = "2.0.0"
current_locale = "0.1.1"
sha2 = "0.10.6"

[profile.release]
debug = true
